fix(ui): migration scss import to use, forward

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,14 +15,18 @@
     "next": "15.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@doldol-package/config": "*",
+    "@doldol-package/ui": "*",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "eslint-import-resolver-typescript": "^4.4.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5"
   }
 }
