--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,15 +15,18 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@doldol-package/config": "*",
     "@doldol-package/ui": "*",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
+    "eslint-import-resolver-typescript": "^4.4.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
