--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,6 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "icons": "*",
     "@turbo/gen": "^2.5.0",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
@@ -19,14 +18,19 @@
     "@types/react-slick": "^0.23.13",
     "@types/react-transition-group": "^4.4.12",
     "eslint": "^9.26.0",
+    "icons": "*",
     "sass": "^1.89.0",
     "typescript": "5.8.2"
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-slick": "^0.30.3",
-    "react-transition-group": "^4.4.5"
+    "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1"
   }
 }
