--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@storybook/react": "^9.0.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
