--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "zustand": "^5.0.5"
