--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
