--- a/apps/poptoy/package.json
+++ b/apps/poptoy/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "zustand": "^5.0.5"
