--- a/apps/poptoy/package.json
+++ b/apps/poptoy/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "next": "15.3.2",
+    "next-seo": "^6.8.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
