fix(build): build error

--- a/packages/libs/tsconfig.json
+++ b/packages/libs/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "tsconfig/react-library.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "esModuleInterop": true,
     "paths": {
       "@libs/*": ["./src/*"]
     },
