--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,14 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": [
+        "ENVIRONMENT",
+        "API_URI",
+        "SITE_URI",
+        "ACCESS_TOKEN",
+        "REFRESH_TOKEN"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"],
