feat(message): add message detail page

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "swiper": "^11.2.8",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
